REGRESSION (r121551) Incorrect handling of invalid media query list. https://bugs.webkit.org/show_bug.cgi?id=119164

Reviewed by Antti Koivisto.

Differentiate between syntactically invalid media queries and media queries with empty expressions.

Introduce a dedicated function for valid, but empty expression queries, so that passing NULL MediaQuerySet
object to CSSParser::createMediaRule() can indicate invalid media query.

Source/WebCore:

Test: fast/media/invalid-media-query-list.html

* css/CSSGrammar.y.in:
* css/CSSParser.cpp:
(WebCore::CSSParser::createMediaRule):
(WebCore::CSSParser::createEmptyMediaRule):
* css/CSSParser.h:

LayoutTests:

* fast/media/invalid-media-query-list-expected.html: Added.
* fast/media/invalid-media-query-list.html: Added.


Canonical link: https://commits.webkit.org/137530@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@153822 268f45cc-cd09-0410-ab3c-d52691b4dbfc